added removal and first sorting

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="roof"></div>
         <div id="header">To-Do List</div>
         <div id="cards-form">
-            <div id="sort-button"><img src="images/sort-down-gray.svg" alt="sort-icon"></div>
+            <div id="sort-button" class="sort-button-down"></div>
             <div class="cards-inner-wrapper">
                 <div class="card">
                     <input type="text" placeholder="new Task">
